--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "buildProd": "ng build --base-href=/your-repo-name/",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
